Add trading.webp image to products listing

--- a/products-2.html
+++ b/products-2.html
@@ -103,7 +103,7 @@
 
     <!-- Banner Start -->
     <section class="banner">
-        <img src="assets/images/product-banner-2.png" alt="banner" loading="lazy">
+        <img src="assets/images/product-banner-2.png" alt="banner" loading="lazy" width="1000" height="800">
         <div class="banner-content">
             <h1 data-aos="fade-up" data-aos-duration="1000">Products</h1>
             <p data-aos="fade" data-aos-duration="1200">From wire rods and TMT pars to structural steel solutions, our products are the backbone of infrastructure and industrial growth-trusted by engineers, builders, and industries for their strength, consistency, and performance</p>
@@ -128,25 +128,294 @@
                 <div class="tab-pane fade show active" id="products-by-type" role="tabpanel">
                     <div class="product-card-row">
                         <!-- Card 1 -->
-                        <div class="product-card">
+                        <a href="black-wires.html" class="product-card">
                             <div class="card-image">
-                                <img src="" alt="Product Image">
+                                <img src="assets/images/products-listing/Black Wires.webp" alt="Product Image" loading="lazy" width="200" height="200">
                             </div>
                             <div class="card-desc">
                                 <h3>Black Wires</h3>
+                                <p>Explore our range of Black Wires ranging from High Carbon to Low & Mediurn Carbon.</p>
+                                <button>READ MORE</button>
                             </div>
-                        </div>
+                        </a>
+                        <!-- Card 2 -->
+                        <a href="gi-wires.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/GI Wires.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>GI Wires</h3>
+                                <p>Explore our range of GI Wires from single wires to stranded wires in various coating options.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 3 -->
+                        <a href="fencing-wires.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/Fencing Wires.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Fencing Wires</h3>
+                                <p>Explore our range of Fencing Wires from Barbed Wires, Chain Link Fence to PVC solutions.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 4 -->
+                        <a href="niznal.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/Niznal.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Niznal</h3>
+                                <p>Explore our new innovation Niznal and what makes this product give upto 6X corrosion resistance.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 5 -->
+                        <a href="zinc-wire-&-products.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/Zinc Wire & Products.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Zinc Wire & Products</h3>
+                                <p>Explore our newest addition of Corrosion solutions as well as our Panther Series.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 6 -->
+                        <a href="aluminium-products.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/Aluminium Conductors.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Aluminium Conductors</h3>
+                                <p>Explore our wide range of aluminium conductors, rods and other solutions.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 7 -->
+                        <a href="cables.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/cable.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Cables</h3>
+                                <p>Explore Nirmal Cables and our solutions for the power industry.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 8 -->
+                        <a href="welding-electrodes.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/Wellding.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Welding Solutions</h3>
+                                <p>Explore our premium solutions for welder's and fabrication.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 9 -->
+                        <a href="rolled-products.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/rolled.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Rolled Products</h3>
+                                <p>Explore our range of Hot Rolled products from our Rolling Mill division.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 10 -->
+                        <a href="trading.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/trading.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Trading</h3>
+                                <p>Ferrous & Non-ferrous metals - Reach out to us for any metal requirements.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <!-- Tab 2 -->
                 <div class="tab-pane fade" id="products-by-industry" role="tabpanel">
-                    <!-- Blank Currently -->
+                    <div class="product-card-row">
+                        <!-- Card 1 -->
+                        <a href="power-&-transmission.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/power-transmission.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Power & Transmission</h3>
+                                <p>Discover our expertise and explore our products engineered for the Power & Transmission sector.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 2 -->
+                        <a href="agriculture-&-fencing.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/agriculture-fencing.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Agriculture & Fencing</h3>
+                                <p>Discover our expertise and explore our products engineered for the Agriculture & Fencing sector.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 3 -->
+                        <a href="general-engineering.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/gen-engineering.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>General Engineering</h3>
+                                <p>Discover our expertise and explore our products engineered for the General Engineering sector.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 4 -->
+                        <a href="concrete-reinforcement.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/concrete.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Concrete Reinforcement</h3>
+                                <p>Discover our expertise and explore our products engineered for the Concrete Reinforcement sector.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 5 -->
+                        <a href="railways.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/railways.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Railways</h3>
+                                <p>Discover our expertise and explore our products engineered for the Railways sector.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                        <!-- Card 6 -->
+                        <a href="construction.html" class="product-card">
+                            <div class="card-image">
+                                <img src="assets/images/products-listing/construction.webp" alt="Product Image" loading="lazy" width="200" height="200">
+                            </div>
+                            <div class="card-desc">
+                                <h3>Construction</h3>
+                                <p>Discover our expertise and explore our products engineered for the Construction sector.</p>
+                                <button>READ MORE</button>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </section> 
     <!-- Products Tabbing End -->
 
+    <!-- Contact Us Start -->
+    <section class="contact-us">
+        <div class="contact-us-content">
+            <h6>Innovation starts with the right partner</h6>
+            <p>Join industry leaders who trust Group Nirmal for performance and reliability. <br> Are you ready to re-imagineer tomorrow?</p>
+            <a href="contact.html"><button>GET IN TOUCH</button></a>
+        </div>
+    </section> 
+    <!-- Contact Us End -->
+
+    <!-- Footer Start -->
+    <footer class="px-md-5 pt-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy">
+                </div>
+                <div class="col-xl-6">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6">
+                            <div class="footer-imnner">
+                                <h5>COMPANY</h5>
+                                <ul class="list-unstyled">
+                                    <li><a href="our-story.html" class="text-decoration-none">Our Story</a></li>
+                                    <li><a href="products.html" class="text-decoration-none">Products</a></li>
+                                    <li><a href="our-presence.html" class="text-decoration-none">Our Presence</a></li>
+                                    <li><a href="csr.html" class="text-decoration-none">CSR</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-5 col-sm-6 mt-4 mt-sm-0">
+                                <div class="footer-imnner" style="margin-bottom: 2.1rem;">
+                                    <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
+                                </div>
+                            <div>
+                                <ul class="list-unstyled">
+                                    <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
+                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a></li>
+                                    <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
+                                    <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 mt-4 mt-md-0">
+                            <div class="footer-imnner" style="width: 10rem; position: relative; right: 2rem;">
+                                <h5>CONTACT US</h5>
+                                <ul class="list-unstyled">
+                                    <li><a href="contact.html" class="text-decoration-none">Corporate Office</a></li>
+                                    <li><a href="contact.html" class="text-decoration-none">Manufacturing Units</a></li>
+                                    <li><a href="career.php" class="text-decoration-none">Careers</a></li>
+                                    <li><a href="our-presence.html" class="text-decoration-none">Media</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 d-none d-xl-block text-end" >
+                    <h5 class="mb-3">Toll Free No. 1800 309 3876</h5>
+                    <div class="social text-end position-relative d-none d-md-block mb-4">
+                        <ul class="list-unstyled d-inline-flex mb-0">
+                            <li>
+                                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://x.com/NirmalWires" target="_blank">
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy" />
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75" loading="lazy">
+                </div>
+            </div>
+        </div>
+    </footer> 
+    <!-- Footer End -->
+
+    <!-- WhatsApp Icon Start -->
+    <section class="wp">
+        <a href="https://wa.me/18003093876" target="_blank">
+            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy">
+        </a>
+    </section> 
+    <!-- WhatsApp Icon End -->
 
     <!-- -------------------------------------------------------------------------------------------------------------------------------- -->
 
