Update product buttons from "READ MORE" to "VIEW PRODUCTS" for clarity

--- a/products-2.html
+++ b/products-2.html
@@ -135,7 +135,7 @@
                             <div class="card-desc">
                                 <h3>Black Wires</h3>
                                 <p>Explore our range of Black Wires ranging from High Carbon to Low & Mediurn Carbon.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 2 -->
@@ -146,7 +146,7 @@
                             <div class="card-desc">
                                 <h3>GI Wires</h3>
                                 <p>Explore our range of GI Wires from single wires to stranded wires in various coating options.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 3 -->
@@ -157,7 +157,7 @@
                             <div class="card-desc">
                                 <h3>Fencing Wires</h3>
                                 <p>Explore our range of Fencing Wires from Barbed Wires, Chain Link Fence to PVC solutions.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 4 -->
@@ -168,7 +168,7 @@
                             <div class="card-desc">
                                 <h3>Niznal</h3>
                                 <p>Explore our new innovation Niznal and what makes this product give upto 6X corrosion resistance.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 5 -->
@@ -179,7 +179,7 @@
                             <div class="card-desc">
                                 <h3>Zinc Wire & Products</h3>
                                 <p>Explore our newest addition of Corrosion solutions as well as our Panther Series.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 6 -->
@@ -190,7 +190,7 @@
                             <div class="card-desc">
                                 <h3>Aluminium Conductors</h3>
                                 <p>Explore our wide range of aluminium conductors, rods and other solutions.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 7 -->
@@ -201,7 +201,7 @@
                             <div class="card-desc">
                                 <h3>Cables</h3>
                                 <p>Explore Nirmal Cables and our solutions for the power industry.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 8 -->
@@ -212,7 +212,7 @@
                             <div class="card-desc">
                                 <h3>Welding Solutions</h3>
                                 <p>Explore our premium solutions for welder's and fabrication.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 9 -->
@@ -223,7 +223,7 @@
                             <div class="card-desc">
                                 <h3>Rolled Products</h3>
                                 <p>Explore our range of Hot Rolled products from our Rolling Mill division.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 10 -->
@@ -234,7 +234,7 @@
                             <div class="card-desc">
                                 <h3>Trading</h3>
                                 <p>Ferrous & Non-ferrous metals - Reach out to us for any metal requirements.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                     </div>
@@ -250,7 +250,7 @@
                             <div class="card-desc">
                                 <h3>Power & Transmission</h3>
                                 <p>Discover our expertise and explore our products engineered for the Power & Transmission sector.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 2 -->
@@ -261,7 +261,7 @@
                             <div class="card-desc">
                                 <h3>Agriculture & Fencing</h3>
                                 <p>Discover our expertise and explore our products engineered for the Agriculture & Fencing sector.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 3 -->
@@ -272,7 +272,7 @@
                             <div class="card-desc">
                                 <h3>General Engineering</h3>
                                 <p>Discover our expertise and explore our products engineered for the General Engineering sector.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 4 -->
@@ -283,7 +283,7 @@
                             <div class="card-desc">
                                 <h3>Concrete Reinforcement</h3>
                                 <p>Discover our expertise and explore our products engineered for the Concrete Reinforcement sector.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 5 -->
@@ -294,7 +294,7 @@
                             <div class="card-desc">
                                 <h3>Railways</h3>
                                 <p>Discover our expertise and explore our products engineered for the Railways sector.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                         <!-- Card 6 -->
@@ -305,7 +305,7 @@
                             <div class="card-desc">
                                 <h3>Construction</h3>
                                 <p>Discover our expertise and explore our products engineered for the Construction sector.</p>
-                                <button>READ MORE</button>
+                                <button>VIEW PRODUCTS</button>
                             </div>
                         </a>
                     </div>
