--- a/contact.html
+++ b/contact.html
@@ -35,72 +35,72 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
+                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy" width="50" height="50"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
-                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy">
+                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy" width="50" height="50">
             </div>
             <div class="menu-btn">
-                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy"> MENU</button>
+                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy" width="20" height="20"> MENU</button>
             </div>
         </div>
         <div class="nav-right">
             <div class="social-icons">
                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img
-                        src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy"></a>
+                        src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy" width="20" height="20"></a>
                 <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img
-                        src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy"></a>
+                        src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy" width="20" height="20"></a>
                 <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img
-                        src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy"></a>
+                        src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy" width="20" height="20"></a>
                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img
-                        src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy"></a>
+                        src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy" width="20" height="20"></a>
                 <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg"
-                        alt="twitter" loading="lazy"></a>
-                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy"></a>
+                        alt="twitter" loading="lazy" width="20" height="20"></a>
+                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy" width="20" height="20"></a>
             </div>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
             <a href="/" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Home</span>
             </a>
             <a href="our-story.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Story</span>
             </a>
             <a href="products.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Products</span>
             </a>
             <a href="quality-assurance.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Quality Assurance</span>
             </a>
             <a href="trading.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Trading</span>
             </a>
             <a href="our-presence.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Presence</span>
             </a>
             <a href="csr.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>CSR</span>
             </a>
             <a href="career.php" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Careers</span>
             </a>
             <a href="view-blog.php" class="menu">
-                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Blog</span>
             </a>
             <a href="contact.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Contact Us</span>
             </a>
         </div>
@@ -109,7 +109,7 @@
 
     <!-- Banner Start -->
     <section class="about-banner">
-        <img src="assets/images/about-banner.webp" alt="image" loading="lazy" loading="lazy">
+        <img src="assets/images/about-banner.webp" alt="image" loading="lazy" loading="lazy" width="1000" height="400">
         <div class="banner-layer"></div>
         <h1 data-aos="fade-up" data-aos-duration="1200">CONTACT US</h1>
     </section>
@@ -221,7 +221,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy" width="40" height="40">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
@@ -269,34 +269,34 @@
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
                                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" width="40" height="40"/>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg=="
                                     target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" width="40" height="40"/>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/"
                                     target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" width="40" height="40"/>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube"  loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube"  loading="lazy" width="40" height="40"/>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://x.com/NirmalWires" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter"  loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter"  loading="lazy" width="40" height="40"/>
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75" loading="lazy">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75" loading="lazy" width="50" height="50">
                 </div>
             </div>
         </div>
@@ -306,7 +306,7 @@
     <!-- WhatsApp Icon Start -->
     <section class="wp">
         <a href="https://wa.me/18003093876" target="_blank">
-            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy">
+            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy" width="50" height="50">
         </a>
     </section>
     <!-- WhatsApp Icon End -->
