--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy" width="40" height="40">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" loading="lazy" width="170" height="40">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
@@ -243,8 +243,7 @@
                             <div>
                                 <ul class="list-unstyled">
                                     <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
-                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality
-                                            Assurance</a></li>
+                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a></li>
                                     <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
                                     <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
                                 </ul>
@@ -296,7 +295,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75" loading="lazy" width="50" height="50">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" loading="lazy" width="75" height="75">
                 </div>
             </div>
         </div>
