--- a/trading.html
+++ b/trading.html
@@ -34,67 +34,72 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
+                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy" width="50" height="50"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
-                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy">
+                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy" width="50" height="50">
             </div>
             <div class="menu-btn">
-                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy"> MENU</button>
+                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy" width="20" height="20"> MENU</button>
             </div>
         </div>
         <div class="nav-right">
             <div class="social-icons">
-                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy"></a>
-                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy"></a>
-                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy"></a>
-                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy"></a>
-                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg" alt="twitter" loading="lazy"></a>
-                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy"></a>
+                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img
+                        src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy" width="20" height="20"></a>
+                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img
+                        src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img
+                        src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy" width="20" height="20"></a>
+                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img
+                        src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy" width="20" height="20"></a>
+                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg"
+                        alt="twitter" loading="lazy" width="20" height="20"></a>
+                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy" width="20" height="20"></a>
             </div>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
             <a href="/" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Home</span>
             </a>
             <a href="our-story.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Story</span>
             </a>
             <a href="products.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Products</span>
             </a>
             <a href="quality-assurance.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Quality Assurance</span>
             </a>
             <a href="trading.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Trading</span>
             </a>
             <a href="our-presence.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Presence</span>
             </a>
             <a href="csr.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>CSR</span>
             </a>
             <a href="career.php" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Careers</span>
             </a>
             <a href="view-blog.php" class="menu">
-                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Blog</span>
             </a>
             <a href="contact.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Contact Us</span>
             </a>
         </div>
@@ -103,7 +108,7 @@
 
     <!-- Banner Start -->
     <section class="banner">
-        <img src="assets/images/trading/trading-banner.png" alt="banner" loading="lazy">
+        <img src="assets/images/trading/trading-banner.png" alt="banner" loading="lazy" width="800" height="400">
         <div class="banner-layer"></div>
         <div class="banner-content">
             <h1 data-aos="fade-up" data-aos-duration="1200">TRADING</h1>
@@ -117,7 +122,7 @@
         <h1 data-aos="fade" data-aos-duration="1000">PRODUCTS</h1>
         <div class="product-row">
             <div class="product-card" data-aos="fade" data-aos-duration="800" onclick="location.href='aluminium-ingots.html'">
-                <img src="assets/images/trading/product-1.png" alt="image" loading="lazy">
+                <img src="assets/images/trading/product-1.png" alt="image" loading="lazy" width="100" height="200">
                 <div class="card-desc">
                     <h2>Aluminium Ingots</h2>
                     <p>Aluminium ingots are the raw form of Aluminium that is cast into standard shapes for further processing...</p>
@@ -125,7 +130,7 @@
                 </div>
             </div>
             <div class="product-card" data-aos="fade" data-aos-duration="900" onclick="location.href='aluminium-wire-ingots.html'">
-                <img src="assets/images/trading/product-2.png" alt="image" loading="lazy">
+                <img src="assets/images/trading/product-2.png" alt="image" loading="lazy" width="100" height="200">
                 <div class="card-desc">
                     <h2>Aluminum Wire Rods</h2>
                     <p>Aluminium wire rods are long, cylindrical metal rods primarily made from Aluminium...</p>
@@ -133,7 +138,7 @@
                 </div>
             </div>
             <div class="product-card" data-aos="fade" data-aos-duration="1000" onclick="location.href='zinc-ingots.html'">
-                <img src="assets/images/trading/product-3.png" alt="image" loading="lazy">
+                <img src="assets/images/trading/product-3.png" alt="image" loading="lazy" width="100" height="200">
                 <div class="card-desc">
                     <h2>Zinc Ingots</h2>
                     <p>Zinc ingots are solid blocks of refined zinc metal, produced through smelting and refining processes...</p>
@@ -150,28 +155,28 @@
         <div class="why-choose-us-row">
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/trading/network.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
+                    <img src="assets/images/trading/network.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
                 <h2>Global Reach</h2>
                 <p>Extensive trading networks across</p>
             </div>
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/trading/partner.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
+                    <img src="assets/images/trading/partner.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
                 <h2>Reliable Partners</h2>
                 <p>Collaborating with trusted suppliers and clients worldwide.</p>
             </div>
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/trading/bid.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
+                    <img src="assets/images/trading/bid.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
                 <h2>Competitive Pricing</h2>
                 <p>Delivering value without compromising on quality.</p>
             </div>
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/trading/truck.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
+                    <img src="assets/images/trading/truck.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="100" height="80">
                 </div>
                 <h2>Efficient Logistics</h2>
                 <p>Timely delivery backed by robust supply chain management.</p>
@@ -192,7 +197,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" loading="lazy" width="170"
+                        height="40">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
@@ -208,13 +214,14 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-6 mt-4 mt-sm-0">
-                                <div class="footer-imnner" style="margin-bottom: 2.1rem;">
-                                    <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
-                                </div>
+                            <div class="footer-imnner" style="margin-bottom: 2.1rem;">
+                                <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
+                            </div>
                             <div>
                                 <ul class="list-unstyled">
                                     <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
-                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a></li>
+                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a>
+                                    </li>
                                     <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
                                     <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
                                 </ul>
@@ -233,38 +240,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 d-none d-xl-block text-end" >
+                <div class="col-xl-3 d-none d-xl-block text-end">
                     <h5 class="mb-3">Toll Free No. 1800 309 3876</h5>
                     <div class="social text-end position-relative d-none d-md-block mb-4">
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
                                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://x.com/NirmalWires" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75" loading="lazy">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" loading="lazy"
+                        width="75" height="75">
                 </div>
             </div>
         </div>
@@ -274,7 +287,7 @@
     <!-- WhatsApp Icon Start -->
     <section class="wp">
         <a href="https://wa.me/18003093876" target="_blank">
-            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy">
+            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy" width="50" height="50">
         </a>
     </section> 
     <!-- WhatsApp Icon End -->
