Add width and height attributes to images for improved layout and accessibility

--- a/our-presence.html
+++ b/our-presence.html
@@ -129,7 +129,7 @@
             <div class="media-boxes">
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/1.jpg" alt="image" loading="lazy">
+                  <img src="assets/images/media/press-releases/1.jpg" alt="image" loading="lazy" width="0" height="0">
                 </div>
                 <div class="media-head">
                   <h6>Group Nirmal Announces INR 100 Crore Capex to Boost Steel & Aluminum Capacity.</h6>
@@ -143,7 +143,7 @@
                 <div class="center-box">
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/2.jpg" alt="image" loading="lazy">
+                      <img src="assets/images/media/press-releases/2.jpg" alt="image" loading="lazy" width="0" height="0">
                     </div>
                   </div>
                   <div class="center-box-right">
@@ -168,14 +168,14 @@
                   </div>
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/3.jpg" alt="image" loading="lazy">
+                      <img src="assets/images/media/press-releases/3.jpg" alt="image" loading="lazy" width="0" height="0">
                     </div>
                   </div>
                 </div>
               </div>
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/4.jpg" alt="image" loading="lazy">
+                  <img src="assets/images/media/press-releases/4.jpg" alt="image" loading="lazy" width="0" height="0">
                 </div>
                 <div class="media-head">
                   <h6>Digitalisation revolutionised cable designs and manufacturing.</h6>
@@ -192,7 +192,7 @@
             <div class="media-boxes">
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/5.jpg" alt="image" loading="lazy">
+                  <img src="assets/images/media/press-releases/5.jpg" alt="image" loading="lazy" width="0" height="0">
                 </div>
                 <div class="media-head">
                   <h6>Group Nirmal forays into zinc wire: introducing cutting-edge solutions.</h6>
@@ -207,7 +207,7 @@
                 <div class="center-box">
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/6.jpg" alt="image" loading="lazy">
+                      <img src="assets/images/media/press-releases/6.jpg" alt="image" loading="lazy" width="0" height="0">
                     </div>
                   </div>
                   <div class="center-box-right">
@@ -232,14 +232,14 @@
                   </div>
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/7.png" alt="image" loading="lazy">
+                      <img src="assets/images/media/press-releases/7.png" alt="image" loading="lazy" width="0" height="0">
                     </div>
                   </div>
                 </div>
               </div>
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/8.jpg" alt="image" loading="lazy">
+                  <img src="assets/images/media/press-releases/8.jpg" alt="image" loading="lazy" width="0" height="0">
                 </div>
                 <div class="media-head">
                   <h6>Group Nirmal Forays into Zinc Wire: Introducing Cutting-Edge Solutions.</h6>
@@ -256,7 +256,7 @@
             <div class="media-boxes">
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/9.jpg" alt="image" loading="lazy">
+                  <img src="assets/images/media/press-releases/9.jpg" alt="image" loading="lazy" width="0" height="0">
                 </div>
                 <div class="media-head">
                   <h6>Group Nirmal unleashes the potential of NIZNAL™, a revolutionary coated wire technology.</h6>
@@ -270,7 +270,7 @@
                 <div class="center-box">
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/10.jpg" alt="image" loading="lazy">
+                      <img src="assets/images/media/press-releases/10.jpg" alt="image" loading="lazy" width="0" height="0">
                     </div>
                   </div>
                   <div class="center-box-right">
@@ -295,14 +295,14 @@
                   </div>
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/11.jpg" alt="image" loading="lazy">
+                      <img src="assets/images/media/press-releases/11.jpg" alt="image" loading="lazy" width="0" height="0">
                     </div>
                   </div>
                 </div>
               </div>
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/12.jpg" alt="image" loading="lazy">
+                  <img src="assets/images/media/press-releases/12.jpg" alt="image" loading="lazy" width="0" height="0">
                 </div>
                 <div class="media-head">
                   <h6>Nirmal Wires aims to drive global growth with world-class steel wires.</h6>
